# launcher

./: .gitignore  README.md  README_JA.md  README_ZH.md
.github/scripts/: prepare-sdk-source.sh
.github/workflows/: emulator-build.yml  launcher-build.yml
docs/: APPLaunch-App-packaging-guide-ja.md  APPLaunch-App-打包指南.md  macos-docker-build.md
docs/launcher-project-guide/: 00-overview-and-reading-path.md  01-project-layout-and-module-responsibilities.md  04-application-model-and-launch-mechanism.md  05-built-in-page-framework.md  06-resources-and-configuration.md  07-input-system-and-key-mapping.md  10-extension-development-guide.md  11-debugging-and-troubleshooting.md  12-common-modification-entry-points.md
docs/launcher-project-guide-ja/: 00-overview-and-reading-path.md  01-project-layout-and-module-responsibilities.md  04-application-model-and-launch-mechanism.md  05-built-in-page-framework.md  06-resources-and-configuration.md  07-input-system-and-key-mapping.md  10-extension-development-guide.md  11-debugging-and-troubleshooting.md  12-common-modification-entry-points.md
docs/launcher工程详细说明/: 00-总览与阅读路线.md  01-工程目录与模块职责.md  04-应用模型与启动机制.md  05-内置页面框架.md  06-资源与配置系统.md  07-输入系统与按键映射.md  10-扩展开发指南.md  11-调试与故障排查.md  12-常用修改入口速查.md
ext_components/RadioLib/: Kconfig  SConstruct
ext_components/cp0_lvgl/: SConstruct
projects/APPLaunch/: SConstruct  config_defaults.mk  darwin_config_defaults.mk  linux_x86_cross_cp0_config_defaults.mk  linux_x86_sdl2_config_defaults.mk  mac_cross_cp0_config_defaults.mk
projects/CardputerZero-Emulator/: CMakeLists.txt
projects/Compass/: .gitignore  CMakeLists.txt  README.md  bootstrap.sh  config_defaults.mk  darwin_sdl2_config_defaults.mk  fetch_repos.py  linux_x86_cross_cp0_config_defaults.mk  linux_x86_sdl2_config_defaults.mk  lv_conf.h  mac_cross_cp0_config_defaults.mk  package_deb.sh  repos.json
projects/Compass/.github/workflows/: cp0-package.yml
projects/Compass/applications/: compass.desktop
projects/Compass/main/: Kconfig  SConstruct
projects/Compass/main/src/: main.cpp
projects/Compass/main/src/assets/: assets.h  convert_images.py
projects/Compass/main/src/assets/res_c/: font_chivo_medium_14.c
projects/Compass/main/src/core/: compass_app.cpp  compass_app.hpp  compass_router.hpp  compass_types.cpp
projects/Compass/main/src/input/: compass_keypad.cpp
projects/Compass/main/src/models/: calibration_model.cpp  calibration_model.hpp  compass_model.cpp  compass_model.hpp
projects/Compass/main/src/view_models/: calibration_view_model.cpp  calibration_view_model.hpp  compass_view_model.cpp  compass_view_model.hpp
projects/Compass/main/src/views/: bottom_key_bar.hpp  calibration_view.cpp  calibration_view.hpp  compass_view.cpp  compass_view.hpp  view.hpp
projects/Compass/packaging/deb/: compass.desktop.in  package_deb.sh
projects/Compass/src/: main.cpp
projects/Compass/src/assets/: convert_fonts.py
projects/Compass/src/core/: compass_app.cpp  compass_router.cpp  compass_types.hpp
projects/Compass/src/hal/: compass_lvgl_hal.cpp  compass_lvgl_hal.hpp
projects/Compass/src/input/: compass_keypad.hpp
projects/Compass/src/models/: calibration_model.hpp  compass_model.cpp
projects/Compass/src/view_models/: calibration_view_model.cpp  view_model.hpp
projects/Compass/src/views/: bottom_key_bar.cpp  calibration_view.cpp  compass_view.cpp
projects/HelloWorld/: linux_x86_cross_cp0_config_defaults.mk  linux_x86_sdl2_config_defaults.mk  mac_cross_cp0_config_defaults.mk
projects/Recorder/: .gitignore  CMakeLists.txt  README.md  SConstruct  bootstrap.sh  config_defaults.mk  darwin_sdl2_config_defaults.mk  fetch_repos.py  linux_x86_cross_cp0_config_defaults.mk  linux_x86_sdl2_config_defaults.mk  lv_conf.h  mac_cross_cp0_config_defaults.mk  package_deb.sh  repos.json
projects/Recorder/.github/workflows/: cp0-package.yml
projects/Recorder/applications/: recorder.desktop
projects/Recorder/main/: SConstruct
projects/Recorder/main/include/: main.h
projects/Recorder/main/src/: lvgl_main.cpp  main.cpp
projects/Recorder/main/src/assets/: .gitignore  assets.h  convert.py  convert_fonts.py  convert_images.py
projects/Recorder/main/src/assets/fonts/ChivoMono/: font_config.json
projects/Recorder/main/src/assets/res_c/: font_chivo_medium_12.c  font_chivo_mono_medium_12.c
projects/Recorder/main/src/core/: recorder_app.cpp  recorder_app.hpp  recorder_config.hpp  recorder_router.cpp  recorder_router.hpp  recorder_types.cpp  recorder_types.hpp
projects/Recorder/main/src/models/: feedback_tone_model.cpp  feedback_tone_model.hpp  playback_model.cpp  playback_model.hpp  recording_files_model.cpp  recording_files_model.hpp  recording_model.cpp  recording_model.hpp
projects/Recorder/main/src/view_models/: files_view_model.cpp  files_view_model.hpp  playback_view_model.cpp  playback_view_model.hpp  recording_view_model.cpp  recording_view_model.hpp  view_model.hpp
projects/Recorder/main/src/views/: bottom_key_bar.cpp  bottom_key_bar.hpp  playback_view.cpp  playback_view.hpp  recording_files_view.cpp  recording_files_view.hpp  recording_view.cpp  recording_view.hpp  view.hpp
projects/Recorder/main/ui/: recorder.cpp  recorder.hpp
projects/Recorder/packaging/deb/: package_deb.sh  recorder.desktop.in
projects/Recorder/src/: main.cpp
projects/Recorder/src/assets/: assets.h  convert_images.py
projects/Recorder/src/core/: recorder_app.cpp  recorder_app.hpp  recorder_config.cpp
projects/Recorder/src/hal/: recorder_lvgl_hal.cpp  recorder_lvgl_hal.hpp
projects/Recorder/src/input/: recorder_keypad.cpp  recorder_keypad.hpp
projects/Recorder/src/models/: feedback_tone_model.cpp  playback_model.cpp  playback_model.hpp  recording_model.cpp  recording_model.hpp
projects/Recorder/src/view_models/: files_view_model.cpp  files_view_model.hpp  playback_view_model.hpp  recording_view_model.cpp  recording_view_model.hpp
projects/Recorder/src/views/: bottom_key_bar.hpp  playback_view.cpp  recording_files_view.cpp  recording_view.cpp  recording_view.hpp
scripts/: debian_packager.py
(+132 files in other folders)
